# utils

./: .gitignore
configs/: env-static-public-stub.ts  tsconfig.base.json  vitest.base.ts
go/: go.mod  go.sum
go/pkg/config/: config.go  config_test.go
go/pkg/log/: log.go  log_test.go
go/pkg/response/: json.go  json_test.go  status.go  status_test.go
go/pkg/secure/: string.go  string_test.go
go/pkg/signals/: signals.go
go/pkg/util/: convert.go  convert_test.go  http.go  util.go  util_test.go
js/: cn.test.ts  log.test.ts  log.ts  platform.test.ts  platform.ts  updater.ts
js/i18n/: README.md  inlang-settings.template.json  package.json  pnpm-lock.yaml
js/i18n/scripts/: lint-locales.mjs
js/i18n/src/: index.ts  osLocale.ts  viteConfig.ts
js/i18n/svelte/: LanguageSwitcher.svelte  index.ts  languageController.svelte.ts
js/inbound/: ErrorToast.svelte  IncludeToggle.svelte  ReportWizard.svelte  client.ts  index.ts  types.ts  wizard.svelte.ts
rust/inbound/: Cargo.toml
rust/inbound-build/: Cargo.toml
rust/inbound-build/src/: lib.rs
rust/inbound/src/: capture.rs  collect.rs  lib.rs  report.rs  transport.rs
scripts/: install_deps.ps1  install_deps.sh  patch.ps1  patch.sh  secret-mngr.sh  secrets.sh  tauri-dev-inbound.sh
