[package]
name = "inbound"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false }
tauri-plugin-log = "2"

[features]
default = ["path-a"]
path-a = []
path-b = []
